[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scanline-python-wrapper"
version = "1.0.0"
authors = [
    {name = "Wanadev", email = "contact@wanadev.fr"},
]
description = "Python wrapper for the scanline CLI scanner tool for macOS"
readme = "README.rst"
keywords = ["scan", "scanline", "macos", "icc"]
license = "bsd-3-clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "nox",
    "flit",
    "black",
    "flake8",
    "flake8-pyproject",
    "validate-pyproject",
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
source = "https://github.com/wanadev/scanline-python-wrapper"
documentation = "https://wanadev.github.io/scanline-python-wrapper/"
changelog = "https://github.com/wanadev/scanline-python-wrapper?tab=readme-ov-file#changelog"
issues = "https://github.com/wanadev/scanline-python-wrapper/issues"
chat = "https://discord.gg/BmUkEdMuFp"

[tool.setuptools]
py-modules = ["scanline_wrapper"]

[tool.black]
target-version = ["py310"]

[tool.flake8]
ignore = [
    # ↓↓ Black handles that its way... :)
    "W503",  # line break before binary operator
    "E501",  # line too long (> 79 characters)
]
